fix horizontal scroll issue in mobile view, this time for real :)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,9 @@
 html{
   scroll-behavior: smooth;
-  width: 100%;
+}
+
+*{
+  /* outline: 2px solid crimson; */
 }
 
 /* .hidden{
